k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: app
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
